Mitgliedsstatus bei Anrufung prüfen

--- a/A_Schemata.tex
+++ b/A_Schemata.tex
@@ -20,6 +20,7 @@ Hierzu ausführlich: Kapitel~\ref{Anrufung}.
 	\begin{enumerate}
 	\item Name
 	\item Anschrift
+	\item Mitgliedsstatus (über die jew. Mitgliederverwaltung)
 	\item Kontaktmöglichkeiten
 	\item Parteifähigkeit
 	\end{enumerate}
