--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -15,7 +15,7 @@ Sofern gegen das Urteil Rechtsmittel eingelegt werden können, wird es mit einer
 Während gem. \S~11 Abs.~7~SGO\indexPar{SGO!11@\S~11!7@Abs.~7} lediglich die Dokumentationsvorschriften explizit auch für einstweilige Anordnungen gelten, ist es gängige Praxis, sämtliche Vorschriften über Urteile auf einstweilige Anordnungen sinngemäß anzuwenden.
 
 Anders als bei Urteilen des Europäischen Gerichtshofes oder z.B. französischen Gerichten oder Gerichten aus dem angelsächsischen Rechtsraum werden Urteile in Deutschland regelmäßig in \enquote{ganz normalem Fließtext} verfasst, d.h. als mehrere Sätze, in Absätze unterteilt, regelmäßig mit Zwischenüberschriften bzw. Nummerierung gegliedert.
-Die Parteien werden im Rahmen der Schiedsgerichtsordnung schlicht als \emph{Antragstellerinnen} und \emph{Antragsgegnerinnen} bezeichnet (nicht etwa als Klägerinnen und Beklagte); \enquote{Angeklagte}\footnote{Der Begriff stammt aus dem Strafrecht; die Verwendung innerhalb eines Schiedsgerichtsverfahrens verbietet sich.} kennt die SGO auch im Falle von Ordnungsmaßnahmen nicht.
+Die Parteien werden im Rahmen der Schiedsgerichtsordnung schlicht als \emph{Antragstellerinnen} und \emph{Antragsgegnerinnen} bezeichnet\footnote{\S~8 Abs.~1~SGO\indexPar{SGO!8@\S~8!1@Abs.~1} macht Anträge zum Gegenstand der Anrufung und damit des Verfahrens. Der Begriff findet auch im verwaltungsrechtlichen Verfahren Anwendung.} (nicht etwa als Klägerinnen und Beklagte); \enquote{Angeklagte}\footnote{Der Begriff stammt aus dem Strafrecht; die Verwendung innerhalb eines Schiedsgerichtsverfahrens verbietet sich.} kennt die SGO auch im Falle von Ordnungsmaßnahmen nicht.
 Im Falle einer Berufung sollten diese Bezeichnungen um die der \emph{Berufungsführerin} und der \emph{Berufungsgegnerin} ergänzt werden.
 Auch sonst sollte die Sprache möglichst einfach gehalten sein:
 Ein gutes Urteil kommt ohne komplexe Schachtelsätze aus.
