--- a/sghandbuch.template.tex
+++ b/sghandbuch.template.tex
@@ -23,9 +23,10 @@ für die Piratenpartei Deutschland und Untgliederungen\\
 
 \maketitle
 \thispagestyle{empty}		% Seitennummerierung für Titelseite unterdrücken
+\pagebreak
 
 % Widmung (Zitat)
-\togglecolumnmode			% Einspaltenlayout anschalten
+%\togglecolumnmode			% Einspaltenlayout anschalten
 \thispagestyle{empty}		% Seitennummerierung eine Seite unterdrücken
 \hfill				% Zentrierung 
 \vfill				% Zentrierung
@@ -45,7 +46,7 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 \hfill				% Zentrierung
 \vfill				% Zentrierung
 \clearpage			% Seitenende
-\togglecolumnmode		% Wieder ins Zweitspaltenlayout wechselns
+%\togglecolumnmode		% Wieder ins Zweitspaltenlayout wechselns
 
 \renewcommand{\contentsname}{Inhaltsübersicht}
 \pdfbookmark{\contentsname}{toc}
@@ -90,7 +91,7 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 \appendix
 \backmatter
 \pagenumbering{roman}
-\togglecolumnmode
+%\togglecolumnmode
 
 \printbibliography[heading=bibliography,title={Rechtsprechungsverzeichnis}, type=ruling]
 \printbibliography[heading=bibliography,title={Literaturverzeichnis},nottype=ruling]
