--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -42,7 +42,7 @@ Den noch nicht fertiggestellten Kapitel haben wir --- gewissermaßen als vorläu
 \vspace{20mm}
 
 Simon Gauseweg, LL.B.\\
-Vorsitzender Richter am Landesschiedsgericht Brandenburg
+ehem. Vorsitzender Richter am Landesschiedsgericht Brandenburg
 
 \vspace{5mm}
 
