Sofortige Beschwerde gg. Verfahrensaussetzung

--- a/Instanzenzug.tex
+++ b/Instanzenzug.tex
@@ -18,5 +18,7 @@ Es hat sich jedoch die Möglichkeit der Rückverweisung bei Rechtsfehlern etabli
 \end{figure}
 %\blindtext[1]
 
+% PP-100222152 – https://bsg.piratenpartei.de/2016/09/22/pp-100222152-verfahrensverzoegerungsbeschwerde/ – Gegen Verfahrensaussetzungen ist die sofortige Beschwerde statthaft
+
 %\chapterbib
 % \end{refsection}
