Kommentar zum Inhalt

--- a/Verfahrensarten.tex
+++ b/Verfahrensarten.tex
@@ -23,3 +23,5 @@ Originäre Normenkontrollklagen wie man sie etwa vom Bundesverfassungsgericht ke
 
 %\chapterbib
 % \end{refsection}
+
+% PP#100201462 – S. 8: Fortsetzungsfeststellungsklage (+)
