BSG PP#100222152, BSG PP#100201462

--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -477,6 +477,24 @@
   gender = {sn},
   url = {https://bsg.piratenpartei.de/2015/11/04/beschluss-zu-pp100132493/}
 }
+@RULING{BSGPP100222152,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG PP\#100222152},
+  date = {2016-09-22},
+  gender = {sn},
+  url = {https://bsg.piratenpartei.de/2016/09/22/pp-100222152-verfahrensverzoegerungsbeschwerde/}
+}
+@RULING{BSGPP100201462,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG PP\#100201462},
+  date = {2016-10-27},
+  gender = {sn},
+  url = {https://bsg.piratenpartei.de/2016/11/04/urteil-zu-pp100201462/}
+}
 @RULING{BSG20131005,
   court = {Bundesschiedsgericht},
   shortcourt = {BSG},
