--- a/sghandbuch.sty
+++ b/sghandbuch.sty
@@ -7,7 +7,7 @@
 
 \RequirePackage{scrjura}
 \RequirePackage{titletoc}
-\RequirePackage[toctitles]{titlesec}
+%\RequirePackage[toctitles]{titlesec}
 \RequirePackage[titletoc,title]{appendix}
 \RequirePackage[hyperref=true]{scrhack}
 \RequirePackage[hidelinks]{hyperref}
@@ -108,7 +108,7 @@
   \sort{\field{title}}
 }
 
-\titlespacing*{\chapter}{0pt}{-50pt}{20pt}
+%\titlespacing*{\chapter}{0pt}{-50pt}{20pt}
 
 \@addtoreset{section}{chapter}
 
