Vorlagen vorerst auskommentiert

--- a/sghandbuch.template.tex
+++ b/sghandbuch.template.tex
@@ -81,14 +81,13 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 
 \input{Instanzenzug.tex}
 
-%\appendix
-\begin{appendices}
-	\input{A_Schemata.tex}
-
-	\input{A_Vorlagen.tex}
-\end{appendices}
-
 \appendix
+%\begin{appendices}
+%	\input{A_Schemata.tex}
+%
+%	\input{A_Vorlagen.tex}
+%\end{appendices}
+
 \backmatter
 
 %\togglecolumnmode
