BSG Fehlentscheidung ('Exekutivorgane') zu Befangenheit ergänzt

--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -289,7 +289,7 @@ Schiedsgerichte können nach \S~8 Abs.~7 SGO\indexPar{SGO!8@\S~8!7@Abs.~7} schon
 Mitglieder von Vorständen können nach \S~3 Abs.~6 SGO\indexPar{SGO!3@\S~3!6@Abs.~6} nicht Mitglieder eines Schiedsgerichtes sein, da es aber für diesen Tatbestand aufgrund der Präsensformulierung nur auf gegenwärtige Organmitgliedschaften ankommt, kommen für diese Konstellation nur Nr.~2 und Nr.~3 in Betracht, Nr.~1 kann nie verwirklicht werden.
 
 Die Gründungsversammlung ist von ihrer Natur her in der Piratenpartei dem Parteitag gleich und wird daher wie dieser betrachtet.
-Das Bundesschiedsgericht hat in seiner Entscheidung\footnote{\cite{BSGPP100127862}.} zu ebendiesem Tatbestand entschieden, dass nur Organe der \enquote{Exekutive} erfasst seien, und damit gerade der Parteitag und somit auch die Grundsversammlung als satzungsgebendes (oder auch: rechtsetzendes) Organ und somit Organ der \enquote{Legislative} schon gar nicht erfasst wäre.
+Das Bundesschiedsgericht hat in seinen Entscheidungen\footnote{\cite{BSGPP100127862},\cite{BSGPP100276262}.} zu ebendiesem Tatbestand entschieden, dass nur Organe der \enquote{Exekutive} erfasst seien, und damit gerade der Parteitag und somit auch die Grundsversammlung als satzungsgebendes (oder auch: rechtsetzendes) Organ und somit Organ der \enquote{Legislative} schon gar nicht erfasst wäre.
 Diese Auslegung findet schon keinen Halt im Wortlaut, sondern würde eine Reduktion nach dem Sinn der Norm darstellen.
 Warum diese geboten sein soll, hat das Bundesschiedsgericht nicht begründet.
 Im Gegenteil, der Tatbestand von Nr.~1 in Verbindung mit Nr.~4 könnte in dieser Auslegung des Bundesschiedsgerichtes schon in gar keiner denkbaren Situation verwirklicht werden, wäre also eine leere Norm.
