--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -585,7 +585,15 @@
   gender = {sn},
   url = {http://piraten-bsg.de/#11047632}
 }
-
+@RULING{BSGPP100276262,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG PP#100276262},
+  date = {2017-04-27},
+  gender = {sn},
+  url = {https://bsg.piratenpartei.de/2017/04/28/beschluss-zu-pp100276262/}
+}
 
 @RULING{FGHE4K140613,
   court = {Finanzgericht Hessen},
