--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -41,7 +41,7 @@ Den noch nicht fertiggestellten Kapitel haben wir --- gewissermaßen als vorläu
 
 \vspace{20mm}
 
-Simon Gauseweg, LL.B.\\
+Dipl. jur. Simon Gauseweg, LL.B.\\
 ehem. Vorsitzender Richter am Landesschiedsgericht Brandenburg
 
 \vspace{5mm}
